--- a/styles.css
+++ b/styles.css
@@ -1,38 +1,45 @@
-/*  your css code here. If applicable */
-.container {
-  background-color: #f2f2f2;
-  padding: 20px;
-  margin: 50px auto;
-  width: 80%;
-  text-align: center;
-  font-family: Arial, sans-serif;
-  border-radius: 10px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+.img1 {
+  content: url("https://picsum.photos/id/237/200/300");
 }
 
-h1 {
-  color: #333;
+.img2 {
+  content: url("https://picsum.photos/seed/picsum/200/300");
+}
+
+.img3 {
+  content: url("https://picsum.photos/200/300?grayscale");
+}
+.img4 {
+  content: url("https://picsum.photos/200/300/");
+}
+.img5 {
+  content: url("https://picsum.photos/200/300.jpg");
+}
+
+img {
+  margin: 10px;
+  border: 5px solid #555;
+}
+
+.flex {
+  display: flex;
+  justify-content: center;
+}
+
+.selected {
+  border: 5px solid rgb(0, 195, 255);
 }
 
 p {
-  color: #666;
-  font-size: 18px;
-  line-height: 1.5;
-  margin-bottom: 20px;
+  text-align: center;
 }
 
 button {
-  background-color: #4CAF50;
-  color: white;
-  border: none;
-  padding: 10px 20px;
-  text-align: center;
-  font-size: 16px;
-  border-radius: 5px;
-  cursor: pointer;
-  transition: background-color 0.3s;
+  margin: 20px;
 }
 
-button:hover {
-  background-color: #3e8e41;
+#verify,
+#reset,
+#para {
+  display: none;
 }
